--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -16,11 +16,11 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/list"
+        android:id="@+id/map_nav"
         android:icon="@drawable/ic_map"
         android:title="@string/title_map" />
     <item
-        android:id="@+id/fav"
+        android:id="@+id/list"
         android:icon="@drawable/ic_list"
         android:title="@string/title_list" />
 </menu>
