--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,8 @@
 
     <dimen name="detail_app_height">300dp</dimen>
     <dimen name="card_radius_global">6dp</dimen>
+    <dimen name="width_info_window">140dp</dimen>
+    <dimen name="height_info_window">220dp</dimen>
+    <dimen name="card_elevation">3dp</dimen>
+    <dimen name="size_gradient_price">90dp</dimen>
 </resources>
