--- a/app/src/main/res/navigation/map_nav.xml
+++ b/app/src/main/res/navigation/map_nav.xml
@@ -9,5 +9,15 @@
         android:id="@+id/mapScreen"
         android:name="com.manuelblanco.spacedemo.ui.map.MapFragment"
         android:label="@string/title_map"
-        tools:layout="@layout/fragment_map" />
+        tools:layout="@layout/fragment_map">
+    <action
+        android:id="@+id/action_list_to_detail"
+        app:destination="@id/detailScreen" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailScreen"
+        android:name="com.manuelblanco.spacedemo.ui.detail.DetailFragment"
+        android:label="@string/title_detail"
+        tools:layout="@layout/fragment_detail" />
 </navigation>
