--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="height_info_window">220dp</dimen>
     <dimen name="card_elevation">3dp</dimen>
     <dimen name="size_gradient_price">90dp</dimen>
+    <dimen name="size_item_gallery">150dp</dimen>
 </resources>
